--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Xod Academy</title>
+    <link rel="shortcut icon" href="setting/img/iconvkladka.png" type="image/x-icon">
+    <link rel="stylesheet" href="setting/css/style.css">
 </head>
 <body>
-    
+    <header class="conteiner">
+        <button class="hamburger hamburger--collapse" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>  
+    </header>    
 </body>
 </html>
