--- a/index.html
+++ b/index.html
@@ -58,8 +58,86 @@
       </div>
 
       <!-- *Banner -->
-      <img src="/setting/img/banner.jpg" alt="banner" class="header__banner" />
+      <div class="header__banner conteiner">
+        <div class="header__banner__title">
+          <span class="header__banner__title_h1">
+            Образовательная платформа
+          </span>
+          <span class="header__banner__title_h2"> ХОД Future Academy </span>
+          <span class="header__banner__title_p">
+            Актуальные знания для новичков и профессионалов
+          </span>
+        </div>
+      </div>
     </header>
+    <div class="conteiner info">
+      <div class="info__sova">
+        <img src="setting/img/Group 839.png" alt="sova" />
+        <div class="info__sova__title">
+          <span class="info__sova__title__text">Кем вы хотите стать?</span>
+          <span class="info__sova__title__p">
+            Пора найти себя <br />
+            и выбрать подходящий <br />
+            курс :)</span
+          >
+          <span class="info__sova__title_end"> Удачи!</span>
+        </div>
+      </div>
+      <div class="info__select">
+        <form action="" class="info__select__form">
+          <div class="info__select__old">
+            <div class="info__select__old__child">
+              <img src="setting/img/children.png" alt="child" />
+              <div class="info__select__old__child__title">
+                <span class="info__select__old__child__title_h1">Дети</span>
+                <span class="info__select__old__child__title_p"
+                  >8 — 14 лет</span
+                >
+              </div>
+            </div>
+            <div class="info__select__old__child margin_left">
+              <img src="setting/img/teens.png" alt="teen" />
+              <div class="info__select__old__child__title">
+                <span class="info__select__old__child__title_h1"
+                  >Подростки</span
+                >
+                <span class="info__select__old__child__title_p"
+                  >14 — 18 лет</span
+                >
+              </div>
+            </div>
+            <div class="info__select__old__child margin_left">
+              <img src="setting/img/oldest.png" alt="oldest" />
+              <div class="info__select__old__child__title">
+                <span class="info__select__old__child__title_h1">Взрослые</span>
+                <span class="info__select__old__child__title_p">18 — ∞ </span>
+              </div>
+            </div>
+          </div>
+          <div class="border__progress"></div>
+        </form>
+        <div class="info__select__button">
+          <div class="info__select__button__block">
+            <button class="info__select__button__style">Робототехника</button>
+            <button class="info__select__button__style">Создание игр</button>
+            <button class="info__select__button__style">Web-разработка</button>
+            <button class="info__select__button__style">Мультимедиа</button>
+            <button class="info__select__button__style">Шахматы</button>
+          </div>
+          <div class="info__select__button__block">
+            <button class="info__select__button__style">
+              3D-моделирование и дизайн
+            </button>
+            <button class="info__select__button__style">Английский язык</button>
+            <button class="info__select__button__style">Блогинг</button>
+            <button class="info__select__button__style">Soft skills</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="conteiner video">
+      <img src="setting/img/video.png" alt="video" />
+    </div>
   </body>
 
   <!-- ! Hamburger -->
