--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <form action="" class="info__select__form">
           <div class="info__select__old">
             <div class="info__select__old__child">
-              <img src="setting/img/children.png" alt="child" />
+              <img src="setting/img/children.png" alt="child" class="img__child" />
               <div class="info__select__old__child__title">
                 <span class="info__select__old__child__title_h1">Дети</span>
                 <span class="info__select__old__child__title_p"
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="info__select__old__child margin_left">
-              <img src="setting/img/teens.png" alt="teen" />
+              <img src="setting/img/teens.png" alt="teen" class="img__child" />
               <div class="info__select__old__child__title">
                 <span class="info__select__old__child__title_h1"
                   >Подростки</span
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="info__select__old__child margin_left">
-              <img src="setting/img/oldest.png" alt="oldest" />
+              <img src="setting/img/oldest.png" alt="oldest" class="img__child" />
               <div class="info__select__old__child__title">
                 <span class="info__select__old__child__title_h1">Взрослые</span>
                 <span class="info__select__old__child__title_p">18 — ∞ </span>
@@ -136,8 +136,12 @@
       </div>
     </div>
     <div class="conteiner video">
-      <img src="setting/img/video.png" alt="video" />
+      <img src="setting/img/video.png" alt="video" style="width: 100%;" />
     </div>
+    <div class="conteiner">
+      
+    </div>
+
   </body>
 
   <!-- ! Hamburger -->
