--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="conteiner navbar">
         <!-- * logo -->
         <a href="#">
-          <img src="/setting/img/logo.png" alt="logo" class="navbar__logo" />
+          <img src="setting/img/logo.png" alt="logo" class="navbar__logo" />
         </a>
         <!-- * Links -->
         <div class="navbar__strokes">
