--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
     <div class="conteiner info">
       <div class="info__sova">
-        <img src="setting/img/Group 839.png" alt="sova" />
+        <img src="setting/img/Group 839.png" alt="sova" style="max-width:100%"/>
         <div class="info__sova__title">
           <span class="info__sova__title__text">Кем вы хотите стать?</span>
           <span class="info__sova__title__p">
