--- a/index.html
+++ b/index.html
@@ -86,31 +86,31 @@
       <div class="info__select">
         <form action="" class="info__select__form">
           <div class="info__select__old">
-            <div class="info__select__old__child">
-              <img src="setting/img/children.png" alt="child" class="img__child" />
-              <div class="info__select__old__child__title">
-                <span class="info__select__old__child__title_h1">Дети</span>
-                <span class="info__select__old__child__title_p"
+            <div class="info__select__old__section">
+              <img src="setting/img/children.png" alt="child" class="icon__section" />
+              <div class="info__select__old__section__title">
+                <span class="info__select__old__section__title_h1">Дети</span>
+                <span class="info__select__old__section__title_p"
                   >8 — 14 лет</span
                 >
               </div>
             </div>
-            <div class="info__select__old__child margin_left">
-              <img src="setting/img/teens.png" alt="teen" class="img__child" />
-              <div class="info__select__old__child__title">
-                <span class="info__select__old__child__title_h1"
+            <div class="info__select__old__section margin_left">
+              <img src="setting/img/teens.png" alt="teen" class="icon__section" />
+              <div class="info__select__old__section__title">
+                <span class="info__select__old__section__title_h1"
                   >Подростки</span
                 >
-                <span class="info__select__old__child__title_p"
+                <span class="info__select__old__section__title_p"
                   >14 — 18 лет</span
                 >
               </div>
             </div>
-            <div class="info__select__old__child margin_left">
-              <img src="setting/img/oldest.png" alt="oldest" class="img__child" />
-              <div class="info__select__old__child__title">
-                <span class="info__select__old__child__title_h1">Взрослые</span>
-                <span class="info__select__old__child__title_p">18 — ∞ </span>
+            <div class="info__select__old__section margin_left">
+              <img src="setting/img/oldest.png" alt="oldest" class="icon__section" />
+              <div class="info__select__old__section__title">
+                <span class="info__select__old__section__title_h1">Взрослые</span>
+                <span class="info__select__old__section__title_p">18 — ∞ </span>
               </div>
             </div>
           </div>
@@ -139,10 +139,6 @@
       <img src="setting/img/video.png" alt="video" style="width: 100%;" />
     </div>
     <div class="conteiner">
-
-      <div class="conteiner">
-
-      </div>
     </div>
 
   </body>
