--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Xod Academy</title>
-    <link rel="stylesheet" href="setting/fonts/icomoon-v1.0 (2)/style.css" />
+    <link rel="stylesheet" href="setting/fonts/icomoon-v1.0/style.css" >
     <link
       rel="shortcut icon"
       href="setting/img/iconvkladka.png"
       type="image/x-icon"
-    />
-    <link rel="stylesheet" href="setting/css/style.css" />
+    >
+    <link rel="stylesheet" href="setting/css/style.css" >
   </head>
   <body>
     <header class="conteiner header">
       <!-- *NaVBaR -->
       <div class="conteiner navbar">
         <!-- * logo -->
-        <a href="#">
-          <img src="setting/img/logo.png" alt="logo" class="navbar__logo" />
-        </a>
+        <img src="setting/img/logo.png" alt="logo" class="navbar__logo" >
         <!-- * Links -->
         <div class="navbar__strokes">
           <a href="#" class="navbar__link"
@@ -70,77 +68,91 @@
         </div>
       </div>
     </header>
-    <div class="conteiner info">
-      <div class="info__sova">
-        <img src="setting/img/Group 839.png" alt="sova" style="max-width:100%"/>
-        <div class="info__sova__title">
-          <span class="info__sova__title__text">Кем вы хотите стать?</span>
-          <span class="info__sova__title__p">
-            Пора найти себя <br />
-            и выбрать подходящий <br />
-            курс :)</span
-          >
-          <span class="info__sova__title_end"> Удачи!</span>
-        </div>
-      </div>
-      <div class="info__select">
-        <form action="" class="info__select__form">
-          <div class="info__select__old">
-            <div class="info__select__old__section">
-              <img src="setting/img/children.png" alt="child" class="icon__section" />
-              <div class="info__select__old__section__title">
-                <span class="info__select__old__section__title_h1">Дети</span>
-                <span class="info__select__old__section__title_p"
-                  >8 — 14 лет</span
-                >
-              </div>
-            </div>
-            <div class="info__select__old__section margin_left">
-              <img src="setting/img/teens.png" alt="teen" class="icon__section" />
-              <div class="info__select__old__section__title">
-                <span class="info__select__old__section__title_h1"
-                  >Подростки</span
-                >
-                <span class="info__select__old__section__title_p"
-                  >14 — 18 лет</span
-                >
-              </div>
-            </div>
-            <div class="info__select__old__section margin_left">
-              <img src="setting/img/oldest.png" alt="oldest" class="icon__section" />
-              <div class="info__select__old__section__title">
-                <span class="info__select__old__section__title_h1">Взрослые</span>
-                <span class="info__select__old__section__title_p">18 — ∞ </span>
-              </div>
-            </div>
-          </div>
-          <div class="border__progress"></div>
-        </form>
-        <div class="info__select__button">
-          <div class="info__select__button__block">
-            <button class="info__select__button__style">Робототехника</button>
-            <button class="info__select__button__style">Создание игр</button>
-            <button class="info__select__button__style">Web-разработка</button>
-            <button class="info__select__button__style">Мультимедиа</button>
-            <button class="info__select__button__style">Шахматы</button>
-          </div>
-          <div class="info__select__button__block">
-            <button class="info__select__button__style">
-              3D-моделирование и дизайн
-            </button>
-            <button class="info__select__button__style">Английский язык</button>
-            <button class="info__select__button__style">Блогинг</button>
-            <button class="info__select__button__style">Soft skills</button>
+    <div class="conteiner ">
+      <div class="info">
+        <div class="info__sova">
+          <img src="setting/img/sova.png" alt="sova" style="max-width: 100%" >
+          <div class="info__sova__title">
+            <span class="info__sova__title__text">Кем вы хотите стать?</span>
+            <span class="info__sova__title__p"
+              >Пора найти себя <br >и выбрать подходящий <br >курс :)</span
+            >
+            <span class="info__sova__title_end"> Удачи!</span>
           </div>
         </div>
+        <section class="info__select">
+            <div class="info__select_form">
+              <div class="info__select__old">
+                <div class="info__select__old__section">
+                  <img
+                    src="setting/img/children.png"
+                    alt="child"
+                    class="icon__section"
+                  >
+                  <div class="info__select__old__section__title">
+                    <span class="info__select__old__section__title_h1">Дети</span>
+                    <span class="info__select__old__section__title_p"
+                      >8 — 14 лет</span
+                    >
+                  </div>
+                </div>
+                <div class="info__select__old__section margin_left">
+                  <img
+                    src="setting/img/teens.png"
+                    alt="teen"
+                    class="icon__section"
+                  >
+                  <div class="info__select__old__section__title">
+                    <span class="info__select__old__section__title_h1"
+                      >Подростки</span
+                    >
+                    <span class="info__select__old__section__title_p"
+                      >14 — 18 лет</span
+                    >
+                  </div>
+                </div>
+                <div class="info__select__old__section margin_left">
+                  <img
+                    src="setting/img/oldest.png"
+                    alt="oldest"
+                    class="icon__section"
+                  >
+                  <div class="info__select__old__section__title">
+                    <span class="info__select__old__section__title_h1"
+                      >Взрослые</span
+                    >
+                    <span class="info__select__old__section__title_p">18 — ∞ </span>
+                  </div>
+                </div>
+              </div>
+              <div class="border__progress"></div>
+            </div>
+            <div class="info__select__button">
+              <div class="info__select__button__block">
+                <button class="info__select__button__style">Робототехника</button>
+                <button class="info__select__button__style">Создание игр</button>
+                <button class="info__select__button__style">Web-разработка</button>
+                <button class="info__select__button__style">Мультимедиа</button>
+                <button class="info__select__button__style">Шахматы</button>
+              </div>
+              <div class="info__select__button__block">
+                <button class="info__select__button__style">
+                  3D-моделирование и дизайн
+                </button>
+                <button class="info__select__button__style">Английский язык</button>
+                <button class="info__select__button__style">Блогинг</button>
+                <button class="info__select__button__style">Soft skills</button>
+              </div>
+            </div>
+        </section>
+      </div>
+      <div class="conteiner info__video">
+        <img src="setting/img/video.png" alt="video" style="width: 100%" >
+      </div>
+      <div class="conteiner ">
+          <p class=""></p>
       </div>
     </div>
-    <div class="conteiner video">
-      <img src="setting/img/video.png" alt="video" style="width: 100%;" />
-    </div>
-    <div class="conteiner">
-    </div>
-
   </body>
 
   <!-- ! Hamburger -->
