add  info main aside-text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
     </header>
-    <div class="conteiner ">
+    <div class="conteiner">
       <div class="info">
         <div class="info__sova">
           <img src="setting/img/sova.png" alt="sova" style="max-width: 100%" >
@@ -80,94 +80,107 @@
             <span class="info__sova__title_end"> Удачи!</span>
           </div>
         </div>
-        <section class="info__select">
-            <div class="info__select_form">
-              <div class="info__select__old">
-                <div class="info__select__old__section">
-                  <img
-                    src="setting/img/children.png"
-                    alt="child"
-                    class="icon__section"
+        <div class="info__select">
+          <div class="info__select_form">
+            <div class="info__select__old">
+              <div class="info__select__old__section">
+                <img
+                  src="setting/img/children.png"
+                  alt="child"
+                  class="icon__section"
+                >
+                <div class="info__select__old__section__title">
+                  <span class="info__select__old__section__title_h1">Дети</span>
+                  <span class="info__select__old__section__title_p"
+                    >8 — 14 лет</span
                   >
-                  <div class="info__select__old__section__title">
-                    <span class="info__select__old__section__title_h1">Дети</span>
-                    <span class="info__select__old__section__title_p"
-                      >8 — 14 лет</span
-                    >
-                  </div>
-                </div>
-                <div class="info__select__old__section margin_left">
-                  <img
-                    src="setting/img/teens.png"
-                    alt="teen"
-                    class="icon__section"
-                  >
-                  <div class="info__select__old__section__title">
-                    <span class="info__select__old__section__title_h1"
-                      >Подростки</span
-                    >
-                    <span class="info__select__old__section__title_p"
-                      >14 — 18 лет</span
-                    >
-                  </div>
-                </div>
-                <div class="info__select__old__section margin_left">
-                  <img
-                    src="setting/img/oldest.png"
-                    alt="oldest"
-                    class="icon__section"
-                  >
-                  <div class="info__select__old__section__title">
-                    <span class="info__select__old__section__title_h1"
-                      >Взрослые</span
-                    >
-                    <span class="info__select__old__section__title_p">18 — ∞ </span>
-                  </div>
                 </div>
               </div>
-              <div class="border__progress"></div>
-            </div>
-            <div class="info__select__button">
-              <div class="info__select__button__block">
-                <button class="info__select__button__style">Робототехника</button>
-                <button class="info__select__button__style">Создание игр</button>
-                <button class="info__select__button__style">Web-разработка</button>
-                <button class="info__select__button__style">Мультимедиа</button>
-                <button class="info__select__button__style">Шахматы</button>
+              <div class="info__select__old__section margin_left">
+                <img
+                  src="setting/img/teens.png"
+                  alt="teen"
+                  class="icon__section"
+                >
+                <div class="info__select__old__section__title">
+                  <span class="info__select__old__section__title_h1"
+                    >Подростки</span
+                  >
+                  <span class="info__select__old__section__title_p"
+                    >14 — 18 лет</span
+                  >
+                </div>
               </div>
-              <div class="info__select__button__block">
-                <button class="info__select__button__style">
-                  3D-моделирование и дизайн
-                </button>
-                <button class="info__select__button__style">Английский язык</button>
-                <button class="info__select__button__style">Блогинг</button>
-                <button class="info__select__button__style">Soft skills</button>
+              <div class="info__select__old__section margin_left">
+                <img
+                  src="setting/img/oldest.png"
+                  alt="oldest"
+                  class="icon__section"
+                >
+                <div class="info__select__old__section__title">
+                  <span class="info__select__old__section__title_h1"
+                    >Взрослые</span
+                  >
+                  <span class="info__select__old__section__title_p"
+                    >18 — ∞
+                  </span>
+                </div>
               </div>
             </div>
-        </section>
+            <div class="border__progress"></div>
+          </div>
+          <div class="info__select__button">
+            <div class="info__select__button__block">
+              <button class="info__select__button__style">Робототехника</button>
+              <button class="info__select__button__style">Создание игр</button>
+              <button class="info__select__button__style">
+                Web-разработка
+              </button>
+              <button class="info__select__button__style">Мультимедиа</button>
+              <button class="info__select__button__style">Шахматы</button>
+            </div>
+            <div class="info__select__button__block">
+              <button class="info__select__button__style">
+                3D-моделирование и дизайн
+              </button>
+              <button class="info__select__button__style">
+                Английский язык
+              </button>
+              <button class="info__select__button__style">Блогинг</button>
+              <button class="info__select__button__style">Soft skills</button>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="conteiner info__video">
         <img src="setting/img/video.png" alt="video" style="width: 100%" >
       </div>
-      <div class="conteiner ">
-          <p class=""></p>
+      <div class="conteiner info__main">
+        <p class="info__main__text">
+          Актуальные знания от признанных экспертов рынка <br >
+          для новичков и практикующих специалистов.
+        </p>
+        <aside class="info__main__aside">
+          <div class="info__main__aside__content">
+            <span class="info__main__aside__content_number">600</span>
+            <span class="info__main__aside__content_text">Курсов</span>
+          </div>
+          <div class="info__main__aside__content">
+            <span class="info__main__aside__content_number">82</span>
+            <span class="info__main__aside__content_text">Ведущих <br>  преподавателей</span>
+          </div>
+          <div class="info__main__aside__content">
+            <span class="info__main__aside__content_number">14 795</span>
+            <span class="info__main__aside__content_text">Выпускников</span>
+          </div>
+        </aside>
       </div>
     </div>
   </body>
 
-  <!-- ! Hamburger -->
-  <script>
-    // Look for .hamburger
-    var hamburger = document.querySelector(".hamburger");
-    var navbar__strokes = document.querySelector(".navbar__strokes");
-    // On click
-    hamburger.addEventListener("click", function () {
-      // Toggle class "is-active"
-      hamburger.classList.toggle("is-active");
+  
+  <script src="setting/js/main.js">
 
-      navbar__strokes.classList.toggle("is-active");
-      // Do something else, like open/close menu
-    });
   </script>
   <!-- ! -->
 </html>
