--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
       <div class="conteiner info__main">
         <p class="info__main__text">
-          Актуальные знания от признанных экспертов рынка <br >
+          Актуальные знания от признанных экспертов рынка 
           для новичков и практикующих специалистов.
         </p>
         <aside class="info__main__aside">
@@ -178,7 +178,7 @@
     </div>
   </body>
 
-  
+
   <script src="setting/js/main.js">
 
   </script>
